# Backend-Intern

./: .gitignore  Guidance.txt  README.md  alembic.ini  assignment1.py  assignment2.py  assignment3.py  off_curriculum.txt  prompt_libraries.txt  pyproject.toml  python_curriculum.txt  trash.py  typeHints.py
Blog/: follow.txt  requirements.txt
Blog/src/: alembic.ini  main.py
Blog/src/alembic/: env.py
Blog/src/alembic/versions/: 20260413_01_add_author_name_to_posts.py  31726afd7340_add_created_at_to_comments.py  3e989181a75c_added_view_counts_and_numbers_of_.py  5d353d0f0aa0_add_cascade_delete_to_posts_author_id.py  b146c8fad29a_increase_column_sizes.py  dbf3ba063f3f_add_author_name_to_the_posts_table.py
Blog/src/app/: main.py
Blog/src/app/api/: comments.py  login.py  logout.py  posts.py  users.py
Blog/src/app/core/: config.py  dependencies.py  logger.py  schemas.py  security.py
Blog/src/app/middlewares/: logger_middleware.py
Blog/src/app/models/: __init__.py  base.py  (+5 more)
Fastapi/: database_sqlite.py  jwt_token.py  sqlite_database.db  starting.py
PostgreSQL/: database.py  deps.py  main.py  models.py
Redis/: main.py
Tasks/: main.py
ToDo/: Dockerfile  README.Docker.md  auth.py  compose.yaml  database.py  deps.py  main.py  models.py  requirements.txt
ToDo/routers/: notes.py  users.py
alembic/: env.py
alembic/versions/: 001a5341fb78_add_is_admin_column_to_users.py  498d5f6d5547_add_is_admin_column_to_users.py  6d2c1a4b9f10_add_is_admin_to_users.py
fastapi/: background_email.py  database_sqlite.py  enum_try.py  log.txt  security.py  starting.py
(+18 files in other folders)
