[project]
name = "backend-intern"
version = "0.1.0"
description = ""
authors = [
    {name = "Kiran Khayamali",email = "kirankhayamali@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.uv.workspace]
members = [
    "fastapi",
]

[tool.poetry.scripts]
test-script = "test.py:main"
